compiladores/gr8/gr8_parser.output
   0  $accept : file $end

   1  file : declarations
   2       |

   3  block : tBLOCKBEGIN declarations instructions tBLOCKEND
   4        | tBLOCKBEGIN declarations tBLOCKEND
   5        | tBLOCKBEGIN instructions tBLOCKEND
   6        | tBLOCKBEGIN tBLOCKEND

   7  declarations : declarations declaration
   8               | declaration

   9  declaration : variable
  10              | function

  11  function : type tFUNCTION tIDENTIFIER arguments
  12           | tPUBLIC type tFUNCTION tIDENTIFIER arguments
  13           | tUSE type tFUNCTION tIDENTIFIER arguments
  14           | tPROCEDURE tIDENTIFIER arguments
  15           | tPUBLIC tPROCEDURE tIDENTIFIER arguments
  16           | tUSE tPROCEDURE tIDENTIFIER arguments
  17           | tDEFINE type tFUNCTION tIDENTIFIER arguments_define tAS block
  18           | tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER arguments_define tAS block
  19           | tDEFINE tUSE type tFUNCTION tIDENTIFIER arguments_define tAS block
  20           | tDEFINE tPROCEDURE tIDENTIFIER arguments_define tAS block
  21           | tDEFINE tUSE tPROCEDURE tIDENTIFIER arguments_define tAS block
  22           | tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER arguments_define tAS block

  23  variables : variables ',' variable
  24            | variable

  25  variable : type tIDENTIFIER
  26           | tUSE type tIDENTIFIER
  27           | tPUBLIC type tIDENTIFIER
  28           | type tIDENTIFIER '(' tINITIALLY expr ')'
  29           | tUSE type tIDENTIFIER '(' tINITIALLY expr ')'
  30           | tPUBLIC type tIDENTIFIER '(' tINITIALLY expr ')'

  31  type : tSMALL
  32       | tHUGE
  33       | tSMALL small_sequence
  34       | tHUGE huge_sequence
  35       | fake_sequence

  36  small_sequence : tFAKE
  37                 | tSMALL small_sequence

  38  huge_sequence : tFAKE
  39                | tHUGE huge_sequence

  40  fake_sequence : tNEWS
  41                | tFAKE fake_sequence

  42  instructions : instructions instruction
  43               | instruction

  44  instruction : expr
  45              | tASSIGN expr tTO lval
  46              | tTWEET expr
  47              | tPOST expr
  48              | tAGAIN
  49              | tAGAIN tINTEGER
  50              | tSTOP
  51              | tSTOP tINTEGER
  52              | tRETURN
  53              | tRETURN expr
  54              | cond
  55              | iter
  56              | block

  57  expr2 : expr2 ',' expr
  58        | expr

  59  cond : tIF expr tTHEN block
  60       | tIF expr tTHEN block X

  61  X : tELSIF expr tTHEN block
  62    | tELSE block
  63    | tELSIF expr tTHEN block X

  64  iter : tSWEEPING lval tFROM expr tTO expr tDO block
  65       | tSWEEPING lval tFROM expr tTO expr tBY expr tDO block

  66  arguments :
  67            | tUSES variables

  68  arguments_define :
  69                   | tON variables

  70  expr : tINTEGER
  71       | tFLOAT
  72       | concatenacao
  73       | tMINUS expr
  74       | tPLUS expr
  75       | lval tENDERECO
  76       | expr tTIMES expr
  77       | expr tOVER expr
  78       | expr tMODULUS expr
  79       | expr tPLUS expr
  80       | expr tMINUS expr
  81       | expr tBELOW expr
  82       | expr tABOVE expr
  83       | expr tEQUALS expr
  84       | tNOT expr
  85       | expr tAND expr
  86       | expr tOR expr
  87       | '(' expr ')'
  88       | lval
  89       | lval '=' expr
  90       | tINPUT
  91       | expr tOBJECTS
  92       | tUSE expr2 tFOR tIDENTIFIER
  93       | tDO tIDENTIFIER
  94       | tNULL

  95  concatenacao : tSTRING
  96               | concatenacao tSTRING

  97  lval : tIDENTIFIER
  98       | tCELL expr tAT expr

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	$end  reduce 2

	file  goto 9
	function  goto 10
	declaration  goto 11
	variable  goto 12
	type  goto 13
	fake_sequence  goto 14
	declarations  goto 15


state 1
	type : tSMALL .  (31)
	type : tSMALL . small_sequence  (33)

	tSMALL  shift 16
	tFAKE  shift 17
	tIDENTIFIER  reduce 31
	tFUNCTION  reduce 31

	small_sequence  goto 18


state 2
	type : tHUGE .  (32)
	type : tHUGE . huge_sequence  (34)

	tHUGE  shift 19
	tFAKE  shift 20
	tIDENTIFIER  reduce 32
	tFUNCTION  reduce 32

	huge_sequence  goto 21


state 3
	fake_sequence : tNEWS .  (40)

	.  reduce 40


state 4
	fake_sequence : tFAKE . fake_sequence  (41)

	tNEWS  shift 3
	tFAKE  shift 4
	.  error

	fake_sequence  goto 22


state 5
	function : tUSE . type tFUNCTION tIDENTIFIER arguments  (13)
	function : tUSE . tPROCEDURE tIDENTIFIER arguments  (16)
	variable : tUSE . type tIDENTIFIER  (26)
	variable : tUSE . type tIDENTIFIER '(' tINITIALLY expr ')'  (29)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 23
	.  error

	type  goto 24
	fake_sequence  goto 14


state 6
	function : tPUBLIC . type tFUNCTION tIDENTIFIER arguments  (12)
	function : tPUBLIC . tPROCEDURE tIDENTIFIER arguments  (15)
	variable : tPUBLIC . type tIDENTIFIER  (27)
	variable : tPUBLIC . type tIDENTIFIER '(' tINITIALLY expr ')'  (30)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 25
	.  error

	type  goto 26
	fake_sequence  goto 14


state 7
	function : tDEFINE . type tFUNCTION tIDENTIFIER arguments_define tAS block  (17)
	function : tDEFINE . tPUBLIC type tFUNCTION tIDENTIFIER arguments_define tAS block  (18)
	function : tDEFINE . tUSE type tFUNCTION tIDENTIFIER arguments_define tAS block  (19)
	function : tDEFINE . tPROCEDURE tIDENTIFIER arguments_define tAS block  (20)
	function : tDEFINE . tUSE tPROCEDURE tIDENTIFIER arguments_define tAS block  (21)
	function : tDEFINE . tPUBLIC tPROCEDURE tIDENTIFIER arguments_define tAS block  (22)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 27
	tPUBLIC  shift 28
	tPROCEDURE  shift 29
	.  error

	type  goto 30
	fake_sequence  goto 14


state 8
	function : tPROCEDURE . tIDENTIFIER arguments  (14)

	tIDENTIFIER  shift 31
	.  error


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	declaration : function .  (10)

	.  reduce 10


state 11
	declarations : declaration .  (8)

	.  reduce 8


state 12
	declaration : variable .  (9)

	.  reduce 9


state 13
	function : type . tFUNCTION tIDENTIFIER arguments  (11)
	variable : type . tIDENTIFIER  (25)
	variable : type . tIDENTIFIER '(' tINITIALLY expr ')'  (28)

	tIDENTIFIER  shift 32
	tFUNCTION  shift 33
	.  error


state 14
	type : fake_sequence .  (35)

	.  reduce 35


state 15
	file : declarations .  (1)
	declarations : declarations . declaration  (7)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	$end  reduce 1

	function  goto 10
	declaration  goto 34
	variable  goto 12
	type  goto 13
	fake_sequence  goto 14


state 16
	small_sequence : tSMALL . small_sequence  (37)

	tSMALL  shift 16
	tFAKE  shift 17
	.  error

	small_sequence  goto 35


state 17
	small_sequence : tFAKE .  (36)

	.  reduce 36


state 18
	type : tSMALL small_sequence .  (33)

	.  reduce 33


state 19
	huge_sequence : tHUGE . huge_sequence  (39)

	tHUGE  shift 19
	tFAKE  shift 20
	.  error

	huge_sequence  goto 36


state 20
	huge_sequence : tFAKE .  (38)

	.  reduce 38


state 21
	type : tHUGE huge_sequence .  (34)

	.  reduce 34


state 22
	fake_sequence : tFAKE fake_sequence .  (41)

	.  reduce 41


state 23
	function : tUSE tPROCEDURE . tIDENTIFIER arguments  (16)

	tIDENTIFIER  shift 37
	.  error


state 24
	function : tUSE type . tFUNCTION tIDENTIFIER arguments  (13)
	variable : tUSE type . tIDENTIFIER  (26)
	variable : tUSE type . tIDENTIFIER '(' tINITIALLY expr ')'  (29)

	tIDENTIFIER  shift 38
	tFUNCTION  shift 39
	.  error


state 25
	function : tPUBLIC tPROCEDURE . tIDENTIFIER arguments  (15)

	tIDENTIFIER  shift 40
	.  error


state 26
	function : tPUBLIC type . tFUNCTION tIDENTIFIER arguments  (12)
	variable : tPUBLIC type . tIDENTIFIER  (27)
	variable : tPUBLIC type . tIDENTIFIER '(' tINITIALLY expr ')'  (30)

	tIDENTIFIER  shift 41
	tFUNCTION  shift 42
	.  error


state 27
	function : tDEFINE tUSE . type tFUNCTION tIDENTIFIER arguments_define tAS block  (19)
	function : tDEFINE tUSE . tPROCEDURE tIDENTIFIER arguments_define tAS block  (21)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 43
	.  error

	type  goto 44
	fake_sequence  goto 14


state 28
	function : tDEFINE tPUBLIC . type tFUNCTION tIDENTIFIER arguments_define tAS block  (18)
	function : tDEFINE tPUBLIC . tPROCEDURE tIDENTIFIER arguments_define tAS block  (22)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 45
	.  error

	type  goto 46
	fake_sequence  goto 14


state 29
	function : tDEFINE tPROCEDURE . tIDENTIFIER arguments_define tAS block  (20)

	tIDENTIFIER  shift 47
	.  error


state 30
	function : tDEFINE type . tFUNCTION tIDENTIFIER arguments_define tAS block  (17)

	tFUNCTION  shift 48
	.  error


state 31
	function : tPROCEDURE tIDENTIFIER . arguments  (14)
	arguments : .  (66)

	tUSES  shift 49
	$end  reduce 66
	tINTEGER  reduce 66
	tFLOAT  reduce 66
	tIDENTIFIER  reduce 66
	tSTRING  reduce 66
	tSWEEPING  reduce 66
	tIF  reduce 66
	tPOST  reduce 66
	tTWEET  reduce 66
	tRETURN  reduce 66
	tSTOP  reduce 66
	tAGAIN  reduce 66
	tSMALL  reduce 66
	tHUGE  reduce 66
	tNEWS  reduce 66
	tFAKE  reduce 66
	tUSE  reduce 66
	tPUBLIC  reduce 66
	tDEFINE  reduce 66
	tPROCEDURE  reduce 66
	tDO  reduce 66
	tASSIGN  reduce 66
	tCELL  reduce 66
	tNULL  reduce 66
	tBLOCKEND  reduce 66
	tBLOCKBEGIN  reduce 66
	tINPUT  reduce 66
	tNOT  reduce 66
	tPLUS  reduce 66
	tMINUS  reduce 66
	'('  reduce 66

	arguments  goto 50


32: shift/reduce conflict (shift 51, reduce 25) on '('
state 32
	variable : type tIDENTIFIER .  (25)
	variable : type tIDENTIFIER . '(' tINITIALLY expr ')'  (28)

	'('  shift 51
	$end  reduce 25
	tINTEGER  reduce 25
	tFLOAT  reduce 25
	tIDENTIFIER  reduce 25
	tSTRING  reduce 25
	tSWEEPING  reduce 25
	tIF  reduce 25
	tPOST  reduce 25
	tTWEET  reduce 25
	tRETURN  reduce 25
	tSTOP  reduce 25
	tAGAIN  reduce 25
	tSMALL  reduce 25
	tHUGE  reduce 25
	tNEWS  reduce 25
	tFAKE  reduce 25
	tUSE  reduce 25
	tPUBLIC  reduce 25
	tDEFINE  reduce 25
	tPROCEDURE  reduce 25
	tDO  reduce 25
	tASSIGN  reduce 25
	tCELL  reduce 25
	tAS  reduce 25
	tNULL  reduce 25
	tBLOCKEND  reduce 25
	tBLOCKBEGIN  reduce 25
	tINPUT  reduce 25
	tNOT  reduce 25
	tPLUS  reduce 25
	tMINUS  reduce 25
	','  reduce 25


state 33
	function : type tFUNCTION . tIDENTIFIER arguments  (11)

	tIDENTIFIER  shift 52
	.  error


state 34
	declarations : declarations declaration .  (7)

	.  reduce 7


state 35
	small_sequence : tSMALL small_sequence .  (37)

	.  reduce 37


state 36
	huge_sequence : tHUGE huge_sequence .  (39)

	.  reduce 39


state 37
	function : tUSE tPROCEDURE tIDENTIFIER . arguments  (16)
	arguments : .  (66)

	tUSES  shift 49
	$end  reduce 66
	tINTEGER  reduce 66
	tFLOAT  reduce 66
	tIDENTIFIER  reduce 66
	tSTRING  reduce 66
	tSWEEPING  reduce 66
	tIF  reduce 66
	tPOST  reduce 66
	tTWEET  reduce 66
	tRETURN  reduce 66
	tSTOP  reduce 66
	tAGAIN  reduce 66
	tSMALL  reduce 66
	tHUGE  reduce 66
	tNEWS  reduce 66
	tFAKE  reduce 66
	tUSE  reduce 66
	tPUBLIC  reduce 66
	tDEFINE  reduce 66
	tPROCEDURE  reduce 66
	tDO  reduce 66
	tASSIGN  reduce 66
	tCELL  reduce 66
	tNULL  reduce 66
	tBLOCKEND  reduce 66
	tBLOCKBEGIN  reduce 66
	tINPUT  reduce 66
	tNOT  reduce 66
	tPLUS  reduce 66
	tMINUS  reduce 66
	'('  reduce 66

	arguments  goto 53


38: shift/reduce conflict (shift 54, reduce 26) on '('
state 38
	variable : tUSE type tIDENTIFIER .  (26)
	variable : tUSE type tIDENTIFIER . '(' tINITIALLY expr ')'  (29)

	'('  shift 54
	$end  reduce 26
	tINTEGER  reduce 26
	tFLOAT  reduce 26
	tIDENTIFIER  reduce 26
	tSTRING  reduce 26
	tSWEEPING  reduce 26
	tIF  reduce 26
	tPOST  reduce 26
	tTWEET  reduce 26
	tRETURN  reduce 26
	tSTOP  reduce 26
	tAGAIN  reduce 26
	tSMALL  reduce 26
	tHUGE  reduce 26
	tNEWS  reduce 26
	tFAKE  reduce 26
	tUSE  reduce 26
	tPUBLIC  reduce 26
	tDEFINE  reduce 26
	tPROCEDURE  reduce 26
	tDO  reduce 26
	tASSIGN  reduce 26
	tCELL  reduce 26
	tAS  reduce 26
	tNULL  reduce 26
	tBLOCKEND  reduce 26
	tBLOCKBEGIN  reduce 26
	tINPUT  reduce 26
	tNOT  reduce 26
	tPLUS  reduce 26
	tMINUS  reduce 26
	','  reduce 26


state 39
	function : tUSE type tFUNCTION . tIDENTIFIER arguments  (13)

	tIDENTIFIER  shift 55
	.  error


state 40
	function : tPUBLIC tPROCEDURE tIDENTIFIER . arguments  (15)
	arguments : .  (66)

	tUSES  shift 49
	$end  reduce 66
	tINTEGER  reduce 66
	tFLOAT  reduce 66
	tIDENTIFIER  reduce 66
	tSTRING  reduce 66
	tSWEEPING  reduce 66
	tIF  reduce 66
	tPOST  reduce 66
	tTWEET  reduce 66
	tRETURN  reduce 66
	tSTOP  reduce 66
	tAGAIN  reduce 66
	tSMALL  reduce 66
	tHUGE  reduce 66
	tNEWS  reduce 66
	tFAKE  reduce 66
	tUSE  reduce 66
	tPUBLIC  reduce 66
	tDEFINE  reduce 66
	tPROCEDURE  reduce 66
	tDO  reduce 66
	tASSIGN  reduce 66
	tCELL  reduce 66
	tNULL  reduce 66
	tBLOCKEND  reduce 66
	tBLOCKBEGIN  reduce 66
	tINPUT  reduce 66
	tNOT  reduce 66
	tPLUS  reduce 66
	tMINUS  reduce 66
	'('  reduce 66

	arguments  goto 56


41: shift/reduce conflict (shift 57, reduce 27) on '('
state 41
	variable : tPUBLIC type tIDENTIFIER .  (27)
	variable : tPUBLIC type tIDENTIFIER . '(' tINITIALLY expr ')'  (30)

	'('  shift 57
	$end  reduce 27
	tINTEGER  reduce 27
	tFLOAT  reduce 27
	tIDENTIFIER  reduce 27
	tSTRING  reduce 27
	tSWEEPING  reduce 27
	tIF  reduce 27
	tPOST  reduce 27
	tTWEET  reduce 27
	tRETURN  reduce 27
	tSTOP  reduce 27
	tAGAIN  reduce 27
	tSMALL  reduce 27
	tHUGE  reduce 27
	tNEWS  reduce 27
	tFAKE  reduce 27
	tUSE  reduce 27
	tPUBLIC  reduce 27
	tDEFINE  reduce 27
	tPROCEDURE  reduce 27
	tDO  reduce 27
	tASSIGN  reduce 27
	tCELL  reduce 27
	tAS  reduce 27
	tNULL  reduce 27
	tBLOCKEND  reduce 27
	tBLOCKBEGIN  reduce 27
	tINPUT  reduce 27
	tNOT  reduce 27
	tPLUS  reduce 27
	tMINUS  reduce 27
	','  reduce 27


state 42
	function : tPUBLIC type tFUNCTION . tIDENTIFIER arguments  (12)

	tIDENTIFIER  shift 58
	.  error


state 43
	function : tDEFINE tUSE tPROCEDURE . tIDENTIFIER arguments_define tAS block  (21)

	tIDENTIFIER  shift 59
	.  error


state 44
	function : tDEFINE tUSE type . tFUNCTION tIDENTIFIER arguments_define tAS block  (19)

	tFUNCTION  shift 60
	.  error


state 45
	function : tDEFINE tPUBLIC tPROCEDURE . tIDENTIFIER arguments_define tAS block  (22)

	tIDENTIFIER  shift 61
	.  error


state 46
	function : tDEFINE tPUBLIC type . tFUNCTION tIDENTIFIER arguments_define tAS block  (18)

	tFUNCTION  shift 62
	.  error


state 47
	function : tDEFINE tPROCEDURE tIDENTIFIER . arguments_define tAS block  (20)
	arguments_define : .  (68)

	tON  shift 63
	tAS  reduce 68

	arguments_define  goto 64


state 48
	function : tDEFINE type tFUNCTION . tIDENTIFIER arguments_define tAS block  (17)

	tIDENTIFIER  shift 65
	.  error


state 49
	arguments : tUSES . variables  (67)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 66
	tPUBLIC  shift 67
	.  error

	variable  goto 68
	type  goto 69
	fake_sequence  goto 14
	variables  goto 70


state 50
	function : tPROCEDURE tIDENTIFIER arguments .  (14)

	.  reduce 14


state 51
	variable : type tIDENTIFIER '(' . tINITIALLY expr ')'  (28)

	tINITIALLY  shift 71
	.  error


state 52
	function : type tFUNCTION tIDENTIFIER . arguments  (11)
	arguments : .  (66)

	tUSES  shift 49
	$end  reduce 66
	tINTEGER  reduce 66
	tFLOAT  reduce 66
	tIDENTIFIER  reduce 66
	tSTRING  reduce 66
	tSWEEPING  reduce 66
	tIF  reduce 66
	tPOST  reduce 66
	tTWEET  reduce 66
	tRETURN  reduce 66
	tSTOP  reduce 66
	tAGAIN  reduce 66
	tSMALL  reduce 66
	tHUGE  reduce 66
	tNEWS  reduce 66
	tFAKE  reduce 66
	tUSE  reduce 66
	tPUBLIC  reduce 66
	tDEFINE  reduce 66
	tPROCEDURE  reduce 66
	tDO  reduce 66
	tASSIGN  reduce 66
	tCELL  reduce 66
	tNULL  reduce 66
	tBLOCKEND  reduce 66
	tBLOCKBEGIN  reduce 66
	tINPUT  reduce 66
	tNOT  reduce 66
	tPLUS  reduce 66
	tMINUS  reduce 66
	'('  reduce 66

	arguments  goto 72

